--- a/index.html
+++ b/index.html
@@ -105,11 +105,17 @@
         <div class="project-box3">
 
       
-            Product Designer at <a href="https://bestsummerprograms.com" style="text-decoration: underline;" target="_blank">BestSummerPrograms</a>. <br>
+            Product Designer at <a href="https://bestsummerprograms.com" 
+          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF; text-underline-offset: 5px;" 
+            target="_blank">BestSummerPrograms</a>. <br>
           Previously, 
-          <a href="https://a0.dev"  style="text-decoration: underline;" target="_blank"
+          <a href="https://a0.dev"  
+          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF;  text-underline-offset: 5px;" 
+          target="_blank"
             >a0.dev</a>, 
-             <a href="https://www.sfchronicle.com/"  style="text-decoration: underline;" target="_blank"
+             <a href="https://www.sfchronicle.com/"  
+          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF; text-underline-offset: 5px;" 
+             target="_blank"
             >San Francisco Chronicle</a>.<br>
 
           
