refined anchor styling on secondary text div

--- a/about.html
+++ b/about.html
@@ -61,18 +61,15 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
         <div class="text-break"></div>
                 <div class="secondary-text">
           <a href="mailto: lewisdion26@gmail.com"  
-          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF; text-underline-offset: 5px;" 
           target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
             href="https://www.linkedin.com/in/dion-lewis-1117b21b5/"
-          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF; text-underline-offset: 5px;" 
              target="_blank"
             >LinkedIn</a
           >&nbsp;&nbsp;
           <a
             href="https://drive.google.com/file/d/14EZcBQ3tWuHF3i5kp9bQOhyDJgHgwacX/view?usp=sharing"
-          style="text-decoration: underline; text-decoration-style: dotted; text-decoration-color: #37ABFF; text-underline-offset: 5px;" 
              target="_blank"
             >Resume</a
           >&nbsp;&nbsp;
@@ -360,11 +357,11 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
         <div class="project-descriptions">
           Custom Coded. Typefaces used: 'Offbit' by
           <a href="https://power-type.com/offbit" target="_blank">
-            Power Type Foundry↗</a
+            Power Type Foundry</a
           >
           & 'Mori' by
           <a href="https://pangrampangram.com/products/mori" target="_blank">
-            Pangram Pangram↗</a
+            Pangram Pangram</a
           >.
         </div>
       </div>
