final stylign update, added primary text to have dark text w/ secondary text anchor properties

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="project-box3">
 
-          <div class="secondary-text">
+          <div class="primary-text">
               Product Designer at <a href="https://bestsummerprograms.com" 
               target="_blank">BestSummerPrograms</a>. <br>
             Previously, 
