adding cmu design hyperlink to index

--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
     <div class="index-main">
       <div class="intro-container">
         <div class="project-box1">
-           Hello there! I'm Dion, a product designer focused on building accessible and thoughtful digital experiences.                    Recent CMU Design graduate.
+          <div class="primary-text">
+ Hello there! I'm Dion, a product designer focused on building accessible and thoughtful digital experiences.                    
+           Recent 
+           <a href="https://www.design.cmu.edu/" target="_blank">CMU Design</a> graduate.
+          </div>
+          
         </div>
         <div class="project-box2">
        
