made bsp and a0 temp pages

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </a>
         </div>
         <div class="project-box3">
-           <a href="#" class="gallery-anchor">
+           <a href="gallery/a0.html" class="gallery-anchor">
             <img
               class="project"
               src="images/a0/thumbnail_1.png"
@@ -171,7 +171,7 @@
       
       <div class="project-container">
         <div class="project-box1">
-           <a href="#" class="gallery-anchor">
+           <a href="gallery/bestsummerprograms.html" class="gallery-anchor">
             <img class="project" src="images/bsp/thumbnail_4.png" />
             <div class="text-break"></div>
             <p style="color: #363636">BestSummerPrograms</p>
@@ -180,7 +180,7 @@
           </a>
         </div>
         <div class="project-box2">
-            <a href="gallery/lorebot.html" class="gallery-anchor">
+            <a href="#" class="gallery-anchor">
             <img
               class="project"
               src="images/lorebot/thumbnail_1.png"
