fixing img. topper padding/radius conflict, temp closing anchor for lorebot from index

--- a/gallery/a0.html
+++ b/gallery/a0.html
@@ -131,7 +131,7 @@
         <div class="text-break"></div>
         <p class="subtitle">
           
-As the visual designer, I'm designing a new landing page that better communicates all of a0.dev's capabilities. This work is ongoing, reach out for more information.
+As the visual designer, I designed a new landing page that better communicates all of a0.dev's capabilities. This work is ongoing, reach out for more information.
 
 
         </p>
