--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
               src="images/lorebot/thumbnail_1.png"
             />
             <div class="text-break"></div>
-            <p style="color: #363636">Lorebot</p>
+            <p style="color: #363636">Lorebot (coming soon) </p>
 
-            <p>Live-stream AI tool</p>
+            <p>Live-stream AI tool </p>
           </a>
         </div>
          <div class="project-box3">
