updated current roles, exp section on about

--- a/about.html
+++ b/about.html
@@ -96,9 +96,9 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
         </div>
 
         <div class="smallbr"></div>
-        Independent Visual Designer, a0.dev
+        Independent Product & Visual Designer, a0.dev
         <div class="text-break"></div>
-        <h4 style="color:#757575">September—November 2025</h4>
+        <h4 style="color:#757575">September—Present</h4>
                 <div class="text-break"></div>
         <div class="secondary-text">
         Redesigned the a0.dev landing page to better communicate product offerings and drive conversion. Collaborated with founders and the lead product designer to align visual design, UX, and growth strategy.
