added mori medium font weight, updated h3 to medium weight, changes refelcted across BSP, atlas, a0.

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -132,9 +132,9 @@
 
       <div class="bigbr"></div>
       <div class="core">
-        <p class="subtitle">
-          A web platform that visualizes our social media diets, and prompts reflection.
-        </p>
+        <h3>
+          A web platform that visualizes our short-form media diets, and prompts reflection on our consumption.
+        </h3>
       </div>
 
       <div class="smallbr"></div>
@@ -168,7 +168,7 @@
         <div class="text-break"></div>
         <div class="text-break"></div>
         <p class="blue-subtitle">Problem</p>
-        <p class="subtitle">Social media algorithms are opaque</p>
+        <h3>Social media algorithms are opaque</h3>
         <p style="color: #757575">
           It’s hard to grasp just how narrow our digital view can be or how much
           it may diverge from the experiences of others.
@@ -187,9 +187,9 @@
 
       <div class="core">
         <p class="blue-subtitle">Solution</p>
-        <p class="subtitle">
+        <h3>
          Atlas puts your social media diet in context with others
-        </p>
+        </h3>
         <p style="color: #757575">
           Using user-submitted content, it maps our tastes, similarities, differences, and blindspots, all in one shared view.
         </p>
@@ -216,7 +216,7 @@
       <div class="bigbr"></div>
 
       <div class="core">
-        <p class="subtitle">Ideal User Flow</p>
+        <h3>Ideal User Flow</h3>
         <p style="color: #757575">
           Ideally, users could link their social media accounts directly to
           Atlas to get a complete view of their habits and tastes.
@@ -226,7 +226,7 @@
                     <img class="project" src="../media/chronicle/information-architecture.png" alt="Information architecture diagram showing core flows, onboarding, scrolling feed, tip submission, feed filtering, and smaller features like the map modal and expandable posts.">
                 </div>     -->
         <div class="smallbr"></div>
-        <p class="subtitle">Actual User Flow</p>
+        <h3>Actual User Flow</h3>
         <p style="color: #757575">
           Because large-scale data transparency isn’t feasible, Atlas relies on
           voluntarily submitted user content.
@@ -251,7 +251,7 @@
         <div class="text-break"></div>
         <div class="text-break"></div>
         <p class="blue-subtitle">The map</p>
-        <p class="subtitle">Color coded content map</p>
+        <h3>Color coded content map</h3>
         <p style="color: #757575">
           With 400 video submitted by 20 unique users, I used ML tools—Whisper, CLIP, BLIP, and
           OCR—to categorize and color-code each one, forming distinct genre
@@ -378,7 +378,7 @@ Early thumbnail previews were replaced by opaque genre colors to reduce informat
                 </div>
                 <div class="bigbr"></div>
 
-                <p class="subtitle">Hover for quick info and links</p>
+                <h3>Hover for quick info and links</h3>
                 <p style="color: #757575">
                 Hashtags and video previews offer quick, hyper-specific context on
                 hover, while link lines reveal how content and users connect in a
@@ -433,7 +433,7 @@ Early thumbnail previews were replaced by opaque genre colors to reduce informat
 
       <div class="core">
         <p class="blue-subtitle">Card overlays</p>
-        <p class="subtitle">Click for info-rich cards</p>
+        <h3>Click for info-rich cards</h3>
         <p style="color: #757575">
           Purely spatial layouts can make patterns visible, but leave details
           unclear. Cards complement the map by presenting structured data in a
@@ -483,7 +483,7 @@ Early thumbnail previews were replaced by opaque genre colors to reduce informat
         </div>
     <div class="core">
         <div class="bigbr"></div>
-        <p class="subtitle">Multi-select users to compare and contrast</p>
+        <h3>Multi-select users to compare and contrast</h3>
         <p style="color: #757575">
           Users aren’t limited to one perspective. By selecting multiple users
           at once, they can trace where their algorithms overlap and diverge.
@@ -503,7 +503,7 @@ These users not only share tastes but also submitted content, creating direct li
         </div>
         <div class="bigbr"></div>
 
-        <p class="subtitle">Cards as navigational tools</p>
+        <h3>Cards as navigational tools</h3>
         <p style="color: #757575">
           The map and cards were designed to work in tandem. Each interaction
           within a card re-engages the map, creating a loop between detail and
@@ -549,7 +549,7 @@ These users not only share tastes but also submitted content, creating direct li
 
         <div class="bigbr"></div>
 
-        <p class="subtitle">Surfacing unseen mutuals and genres</p>
+        <h3>Surfacing unseen mutuals and genres</h3>
         <p style="color: #757575">
           Atlas maps what users see and points to what’s missing. By
           highlighting overlooked genres and distant voices, it nudges towards a
@@ -604,7 +604,7 @@ These users not only share tastes but also submitted content, creating direct li
         <div class="text-break"></div>
         <div class="text-break"></div>
         <p class="blue-subtitle">Takeaway</p>
-        <p class="subtitle">Prototyping with code is sick</p>
+        <h3>Prototyping with code is sick :^)</h3>
         <p style="color: #757575">
           Because of Atlas' niche context and goal, I couldn't rely just on
           creative software to design my map. I needed to actually code to find
@@ -612,7 +612,7 @@ These users not only share tastes but also submitted content, creating direct li
         </p>
         <div class="smallbr"></div>
         <p class="blue-subtitle">Next Steps</p>
-        <p class="subtitle">Building a more robust onboarding and takeaway</p>
+        <h3>Building a more robust onboarding and takeaway</h3>
         <p style="color: #757575">
           The most common feedback I've received about Atlas is that it's a bit
           daunting and could use a friendly onboarding. In tandem, it will be
