adjusting spacing at top of program pages

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -72,7 +72,7 @@
 
     <main>
       <div class="bigbr"></div>
-      <div class="bigbr"></div>
+      <div class="smallbr"></div>
 
       <div class="core" id="core">
         <div class="topper">
