--- a/gallery/a0.html
+++ b/gallery/a0.html
@@ -71,8 +71,8 @@
     </div> -->
 
     <main>
-      <div class="bigbr"></div>
-      <div class="bigbr"></div>
+    <div class="bigbr"></div>
+        <div class="smallbr"></div>
 
       <div class="core" id="core">
         <div class="topper">
