reduced h3 size on mobile, collapsed project quick facts into 2 columns on mobile

--- a/gallery/bestsummerprograms.html
+++ b/gallery/bestsummerprograms.html
@@ -72,14 +72,14 @@
 
     <main>
       <div class="bigbr"></div>
-      <div class="bigbr"></div>
+      <div class="smallbr"></div>
 
       <div class="core" id="core">
         <div class="topper">
           <!-- topper is a container for the top of the page -->
 
           <!-- Project title and goal -->
-          <h2>BestSummerPrograms</h2>
+          <h1 class="long-title">BestSummerPrograms</h1>
           <div class="text-break"></div>
                   <p style="color: #757575">
 
@@ -124,6 +124,7 @@
                                         <h4> Yuer Zhu,<span style="color: #757575;"> Product Designer</span></h4>
 
             </div>
+            
             <!-- ss -->
 
             <!-- <div class="quick-facts_container">
