beginning compare page

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           Hello again! My name is Dion Lewis. I’m a digital product designer based in Toronto, and a recent CMU Design graduate with a Bachelor's in Design and a minor in
           Social and Political History. 
           
-I believe at it's best, digital infrastructure can help us explore widely, learn freely, draw closer to one another, and feel deeply.
+I believe at it's best, digital infrastructure can help us live up to our own aspirations. 
         <div class="text-break"></div>
         <div class="text-break"></div>
                 <div class="secondary-text">
