--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="text-break"></div>
             <p style="color: #363636">a0.dev</p>
 
-            <p>Product landing page</p>
+            <p>AI-powered app builder</p>
           </a>
         </div>
       </div>
