--- a/gallery/a0.html
+++ b/gallery/a0.html
@@ -117,7 +117,7 @@
                                     <h4 style="color: #757575">Collaborators</h4>   
                                         <div class="text-break"></div>
                                         <h4>Anthony Pan, <span style="color: #757575;"> Lead Product Designer</span></h4>
-                                        <h4>Seth Setse, <span style="color: #757575;"> Founder</span></h4>
+                                        <h4>Seth Setse, <span style="color: #757575;"> Co-Founder</span></h4>
             </div>
             <!-- ss -->
 
@@ -144,10 +144,10 @@
 
 
          <p class="blue-subtitle">My Role</p>
-        <h3>Landing page & onboarding design</h3>
+        <h3>Designing core user flows and refining the visual language</h3>
         <p style="color: #757575">
- As a product & visual designer, I designed a new landing page that better communicates all of a0.dev's capabilities and currently am working to build out it's onboarding experience on mobile.
-This work is ongoing, reach out for more info.
+As a product and visual designer, I led the redesign of a0.dev’s marketing site to clearly communicate the platform’s capabilities, and I’m currently refining the mobile onboarding and subscription conversion experience.
+This work is ongoing — reach out for more info.
         </p>
       </div>
 
