updated compare diagrams

--- a/gallery/bestsummerprograms-compare.html
+++ b/gallery/bestsummerprograms-compare.html
@@ -269,7 +269,7 @@ Building a comparison experience that helps students and families compare progra
 
       <div class="core">
         <div class="bigbr"></div>
-        <p class="blue-subtitle">Problem</p>
+        <p style="color: #FF3D3D"class="blue-subtitle">Problem</p>
         <h3>Users couldn’t easily compare programs without leaving the site</h3>
         <p style="color: #757575">
           Comparing program details like cost and location is an essential part of making informed application decisions, but without a native comparison feature, users had to juggle tabs or take notes externally for context.
@@ -304,20 +304,22 @@ Building a comparison experience that helps students and families compare progra
       <div class="bigbr"></div>
 
       <div class="core">
-        <p class="blue-subtitle">Goal</p>
+        <p style="color: #0FA958" class="blue-subtitle">Goal</p>
         <h3>Make it easier to compare programs while browsing </h3>
         <p style="color: #757575">
           Our focus was to support program comparison within the
           platform, so users can quickly put program info in context while they browse and decide which ones to save.
+        </p>
+      </div>
+      <div class="smallbr"></div>
            <div class="image-gallery">
           <img
-            class="project"
             src="../images/bsp-compare/goal-diagram.png"
             alt="Ideal user flow, highlighting the reduction in friction with a native comparison feature."
           />
         </div>
         
-      </div>
+      
 
       <div class="bigbr"></div>
 
