edited down problem statment

--- a/gallery/bestsummerprograms-compare.html
+++ b/gallery/bestsummerprograms-compare.html
@@ -270,7 +270,7 @@ Building a comparison experience that helps students and families compare progra
       <div class="core">
         <div class="bigbr"></div>
         <p style="color: #FF3D3D"class="blue-subtitle">Problem</p>
-        <h3>Users couldn’t easily compare programs without leaving the site</h3>
+        <h3>Users couldn’t easily compare programs</h3>
         <p style="color: #757575">
           Comparing program details like cost and location is an essential part of making informed application decisions, but without a native comparison feature, users had to juggle tabs or take notes externally for context.
         </p>
