resized my landing page copy size, content, and global nav bar

--- a/about.html
+++ b/about.html
@@ -20,25 +20,24 @@
   </head>
 
   <body>
-           <header>
+            <header>
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
-            <div class="name">
-              <a href="index.html">
-                <h5 style="color: #37abff">Dion Lewis</h5>
-              </a>
+      
+              <div class="special-buttons">
+                <a href="index.html" class="nav-button">
+                  <h6> Dion Lewis</h6>
+                </a>
             </div>
+
             <div class="special-buttons">
-              <a href="index.html" class="nav-button">
-                <h5>☁</h5>
-                &nbsp; Work
-              </a>
-              <a href="about.html" class="nav-button active">
-                <h5>☺</h5>
-                &nbsp;About
+              <a href="about.html" class="nav-button">
+                                <h6> More</h6>
+
               </a>
             </div>
+
           </div>
         </div>
       </nav>
@@ -51,7 +50,7 @@
       <div class="smallbr"></div>
 
       <div class="core" id="core">
-        <h1>☺ About me</h1>
+        <h1>☺ More </h1>
         <div class="text-break"></div>
           Hello again! My name is Dion Lewis. I’m a digital product designer based in Toronto, and a recent CMU Design graduate with a Bachelor's in Design and a minor in
           Social and Political History. 
