--- a/gallery/a0.html
+++ b/gallery/a0.html
@@ -33,29 +33,23 @@
     gtag("config", "G-XWJLCTCXFF");
   </script>
   <body>
-    <header>
+     <header>
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
-            <div class="name">
-              <a href="../index.html">
-                <h5>Dion Lewis</h5>
-              </a>
+      
+              <div class="special-buttons">
+                <a href="../index.html" class="nav-button">
+                  <h6> Dion Lewis</h6>
+                </a>
             </div>
+
             <div class="special-buttons">
-              <!-- <a href="https://ysiuz.github.io/20250224_force-directed_exp/"
-          target="_blank" class="nav-button">
-                  View Prototype↗
-              </a> -->
-              <a href="../index.html" class="nav-button">
-                <h5>☁</h5>
-                &nbsp; Work
-              </a>
               <a href="../about.html" class="nav-button">
-                <h5>☺</h5>
-                &nbsp;About
+                <h6> More</h6>
               </a>
             </div>
+
           </div>
         </div>
       </nav>
@@ -79,11 +73,11 @@
           <!-- topper is a container for the top of the page -->
 
           <!-- Project title and goal -->
-          <h2>a0.dev</h2>
+          <h1>a0.dev</h1>
          
           <div class="text-break"></div>
  <p style="color: #757575">
-                  a0.dev is a YC-backed mobile app building platform that enables people to code, ship, and monetize apps no matter their technical background.
+                  a0.dev is a YC-backed mobile app building platform that enables people to code, deploy, and monetize apps no matter their technical background.
 
         </p>
                   <div class="text-break"></div>
