--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -33,7 +33,7 @@
     gtag("config", "G-XWJLCTCXFF");
   </script>
   <body>
-    <header>
+    <!-- <header>
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
@@ -59,6 +59,30 @@
           </div>
         </div>
       </nav>
+    </header> -->
+     <header>
+      <nav class="nav-outer">
+        <div class="nav-inner">
+          <div class="nav-buttons">
+      
+              <div class="special-buttons">
+                <a href="../index.html" class="nav-button">
+                  <h6> Dion Lewis</h6>
+                </a>
+            </div>
+
+            <div class="special-buttons">
+               <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank" class="nav-button">
+                <h6>View Prototype↗</h6>
+              </a>
+              <a href="../about.html" class="nav-button">
+                <h6> More</h6>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </nav>
     </header>
 
     <!-- Fixed Navigation Panel -->
@@ -79,15 +103,13 @@
           <!-- topper is a container for the top of the page -->
 
           <!-- Project title and goal -->
-          <h2>Atlas</h2>
-          <div class="text-break"></div>
+          <h1>Atlas</h1>
           <!-- <h3>Making local news faster and more pertinent.</h3>
                     
                     <div class="smallbr"></div> -->
 
           <hr />
 
-          <div class="smallbr"></div>
 
           <!-- Quick facts -->
 
