--- a/gallery/bestsummerprograms-compare.html
+++ b/gallery/bestsummerprograms-compare.html
@@ -37,21 +37,19 @@
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
-            <div class="name">
-              <a href="../index.html">
-                <h5>Dion Lewis</h5>
-              </a>
+      
+              <div class="special-buttons">
+                <a href="../index.html" class="nav-button">
+                  <h6> Dion Lewis</h6>
+                </a>
             </div>
+
             <div class="special-buttons">
-              <a href="../index.html" class="nav-button">
-                <h5>☁</h5>
-                &nbsp; Work
-              </a>
               <a href="../about.html" class="nav-button">
-                <h5>☺</h5>
-                &nbsp;About
+                <h6> About</h6>
               </a>
             </div>
+
           </div>
         </div>
       </nav>
@@ -149,8 +147,7 @@
           <!-- Designing an internal comparison tool that helps users put program
           info in context and decide which they want to save and apply to. -->
 
-Building a comparison experience that helps students and families compare programs and decide what’s worth applying to.
-        </h3>
+Building a comparison experience that helps students and families evaluate programs and decide what’s worth their time.        </h3>
       </div>
 
       <div class="smallbr"></div>
