--- a/gallery/bestsummerprograms.html
+++ b/gallery/bestsummerprograms.html
@@ -33,33 +33,29 @@
     gtag("config", "G-XWJLCTCXFF");
   </script>
   <body>
-    <header>
+     <header>
       <nav class="nav-outer">
         <div class="nav-inner">
           <div class="nav-buttons">
-            <div class="name">
-              <a href="../index.html">
-                <h5>Dion Lewis</h5>
-              </a>
+      
+              <div class="special-buttons">
+                <a href="../index.html" class="nav-button">
+                  <h6> Dion Lewis</h6>
+                </a>
             </div>
+
             <div class="special-buttons">
-              <!-- <a href="https://ysiuz.github.io/20250224_force-directed_exp/"
-          target="_blank" class="nav-button">
-                  View Prototype↗
-              </a> -->
-              <a href="../index.html" class="nav-button">
-                <h5>☁</h5>
-                &nbsp; Work
-              </a>
+              
               <a href="../about.html" class="nav-button">
-                <h5>☺</h5>
-                &nbsp;About
+                <h6> More</h6>
               </a>
             </div>
+
           </div>
         </div>
       </nav>
     </header>
+
 
     <!-- Fixed Navigation Panel -->
     <!-- <div class="fixed-nav-panel">
