adjusting atlas spacing

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -109,6 +109,7 @@
                     <div class="smallbr"></div> -->
 
           <hr />
+      <div class="smallbr"></div>
 
 
           <!-- Quick facts -->
