shrunk colophon size from p to h4

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
       <div class="smallbr"></div>
 
       <div class="core" id="core">
-        <h1>☺ More </h1>
+        <h1>☺ More about me </h1>
         <div class="text-break"></div>
           Hello again! My name is Dion Lewis. I’m a digital product designer based in Toronto, and a recent CMU Design graduate with a Bachelor's in Design and a minor in
           Social and Political History. 
@@ -83,7 +83,7 @@ I believe at it's best, digital infrastructure can help us live up to our own as
         <hr />
         <div class="smallbr"></div>
 
-        <h1>♨ Experience</h1>
+        <h1>♨ More Experience</h1>
 
          <div class="smallbr"></div>
         Product Designer, BestSummerPrograms
@@ -174,7 +174,7 @@ I believe at it's best, digital infrastructure can help us live up to our own as
 
 
 
-        <h1>☁ More about me</h1>
+        <h1>☁ More, more</h1>
 
         <div class="text-break"></div>
         <div class="secondary-text">
@@ -354,7 +354,8 @@ I believe at it's best, digital infrastructure can help us live up to our own as
     <footer>
       <div class="secondary-text">
         <div class="project-descriptions">
-          Custom Coded. Typefaces used: 'Offbit' by
+          <h4>
+ Custom Coded. Typefaces used: 'Offbit' by
           <a href="https://power-type.com/offbit" target="_blank">
             Power Type Foundry</a
           >
@@ -362,6 +363,8 @@ I believe at it's best, digital infrastructure can help us live up to our own as
           <a href="https://pangrampangram.com/products/mori" target="_blank">
             Pangram Pangram</a
           >.
+          </h4>
+         
         </div>
       </div>
     </footer>
