building body of compare

--- a/gallery/bestsummerprograms-compare.html
+++ b/gallery/bestsummerprograms-compare.html
@@ -158,16 +158,16 @@ Building a comparison experience that helps students and families evaluate progr
          <source src="../images/bsp-compare/compare-topper.mp4" type="video/mp4" />
         </video>
 
-        <div class="smallbr"></div>
+        <!-- <div class="smallbr"></div>
 
         <div class="image-gallery">
           <img
             src="../images/bsp-compare/check-highlight.png"
             alt="Previous user flow, with users needing to use external tools and juggle tabs to put programs in context."
           />
-        </div>
+        </div> -->
 
-        <div class="smallbr"></div>
+        <!-- <div class="smallbr"></div>
 
 
         <div class="image-gallery">
@@ -175,7 +175,7 @@ Building a comparison experience that helps students and families evaluate progr
             src="../images/bsp-compare/taskbar-highlight.png"
             alt="Previous user flow, with users needing to use external tools and juggle tabs to put programs in context."
           />
-        </div>
+        </div> -->
 
         <div class="smallbr"></div>
 
@@ -397,77 +397,43 @@ Building a comparison experience that helps students and families evaluate progr
         <p class="blue-subtitle">Checkbox Entry Point</p>
         <h3>Click Compare Program to get started</h3>
         <p style="color: #757575">
-          I added a Compare checkbox to the action section on program pages,
-          making comparisons accessible sitewide.
+          I added a Compare checkbox to the action section on program pages, as well as while hovering program tiles in the gallery to reduce friction and empower informed users.
         </p>
       </div>
 
       <div class="smallbr"></div>
       <div class="welcome-container">
         <div class="welcome-box1">
-          <div class="image-gallery">
-            <img class="project" src="../images/atlas/colors-map.png" />
+          <video class="border" width="100%" loop autoplay muted>
+            <source src="../images/bsp-compare/click-program-page.mp4" type="video/mp4" />
+           </video>
+           <div class="text-break"></div>
+           <div class="project-descriptions">
+            <h4 style="color: #757575">Entry point on program page action panel</h4>
           </div>
         </div>
 
         <div class="welcome-box2">
-          <div class="image-gallery">
-            <img class="project" src="../images/atlas/colors.png" />
-          </div>
+          <video class="border" width="100%" loop autoplay muted>
+            <source src="../images/bsp-compare/click-gallery-page.mp4" type="video/mp4" />
+           </video>
+           <div class="text-break"></div>
+           <div class="project-descriptions">
+            <h4 style="color: #757575">Entry point surfaced on program tile hover</h4>
+            </div>  
         </div>
       </div>
+      <!-- <div class="smallbr"></div>
+      <div class="image-gallery">
+        <img
+          src="../images/bsp-compare/entrypoint-highlight.png"
+          alt="Previous user flow, with users needing to use external tools and juggle tabs to put programs in context."
+        />
+      </div> -->
+
       <div class="bigbr"></div>
       <div class="core">
-        <!-- <div class="process">
-          <p style="font-weight: 600">Preserving action hierarchy</p>
-          <div class="text-break"></div>
-          <p style="color: #757575">
-            To keep the primary action (Add to Program List) prominent and avoid
-            clutter, I incorporated Comparison as a secondary action above the
-            action panel.
-          </p>
-          <div class="smallbr"></div>
-        </div>
-
-        <div class="welcome-container">
-          <div class="welcome-box1">
-            <div class="project-descriptions">
-              <p style="font-weight: 600">Before</p>
-            </div>
-            <div class="text-break"></div>
-
-            <div class="image-gallery-border">
-              <img
-                class="project"
-                src="../images/atlas/process-thumbnails.png"
-              />
-            </div>
-            <div class="text-break"></div>
-            <div class="project-descriptions">
-              <h4 style="color: #757575">
-                Sticky panel contains important deadlines and “add to program
-                list button”
-              </h4>
-            </div>
-          </div>
-          <div class="welcome-box2">
-            <div class="project-descriptions">
-              <p style="font-weight: 600">After</p>
-            </div>
-            <div class="text-break"></div>
-            <div class="image-gallery">
-              <img class="project" src="../images/atlas/opaque-nodes.png" />
-            </div>
-            <div class="text-break"></div>
-            <div class="project-descriptions">
-              <h4 style="color: #757575">
-                Sticky panel adds compare checkbox subpanel
-              </h4>
-            </div>
-          </div>
-        </div>
-
-        <div class="bigbr"></div> -->
+       
 
         <h3>Surfacing actions on hover to reduce friction</h3>
         <p style="color: #757575">
@@ -477,9 +443,39 @@ Building a comparison experience that helps students and families evaluate progr
         </p>
 
         <div class="smallbr"></div>
-        <video width="100%" loop autoplay muted>
-          <source src="../images/atlas/solution.mp4" type="video/mp4" />
-        </video>
+        <div class="welcome-container">
+          <div class="welcome-box1">
+            <div class="project-descriptions">
+              <h4 style="font-weight: 600">Initial</h4>
+            </div>
+            <div class="text-break"></div>
+            
+            <div class="image-gallery-border">
+              <img class="project" src="../images/bsp-compare/initial-check.png" />
+              </div>
+            <div class="text-break"></div>
+            <div class="project-descriptions">
+              <h4 style="color: #757575">
+                Thumbnails communicate well individually, but create visual clutter in aggregate.
+              </h4>
+            </div>
+          </div>
+          <div class="welcome-box2">
+            <div class="project-descriptions">
+              <h4 style="font-weight: 600">Refined</h4>
+            </div>
+            <div class="text-break"></div>
+             <div class="image-gallery">
+              <img class="project" src="../images/bsp-compare/refined-check.png" />
+              </div>
+            <div class="text-break"></div>
+            <div class="project-descriptions">
+              <h4 style="color: #757575">
+                Video previews are hidden behind opaque genre colors - sustainable at scale.
+              </h4>
+            </div>
+          </div>
+        </div>
 
         <div class="bigbr"></div>
       </div>
